<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/action_bar_about"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        style="@style/ActionBarTop"
        layout="@layout/action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

    <!--Main Logo-->
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/bondfire_icon4"
        android:layout_gravity="center"/>

    <!--Version-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_version"
        android:gravity="center"/>



    <!--Copy right -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_copyright"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <!--Credits-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_credits"
        android:gravity="center"
        android:id="@+id/tv_credit"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />


    <!--Rate Application-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_rate"
        android:gravity="center"
        android:id="@+id/tv_rate"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <!--Support -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_support"
        android:gravity="center"
        android:id="@+id/tv_support"/>

    <!--Some social media-->

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
    <!--Line-->
    <View
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#99FFFFFF"
        />

    <!--Licenses-->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_licences"
        android:gravity="center"
        android:id="@+id/tv_license"/>


    <!-- Terms of Service-->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_terms"
        android:gravity="center"
        android:id="@+id/tv_terms"/>

    <!--Privacy policy-->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pure_white"
        android:text="@string/about_policy"
        android:gravity="center"
        android:id="@+id/tv_policy"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>