<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

 <!--   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical">-->

      <!--  <View
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1"
            android:background="#FF0000FF" />-->

        <ImageButton
            android:layout_height="0.0dip"
            android:layout_width="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/abp_area"
            android:id="@+id/ib_area"
            android:background="@drawable/tab_button"
            android:src="@drawable/bf_area_icon"
            android:layout_gravity="center"
            />
        <View
            android:background="#66ffffff"
            android:layout_height="1.0dip"
            android:layout_width="fill_parent"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip" />
        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:text="@string/abp_friends"
            android:id="@+id/ib_friends"
            android:background="@drawable/tab_button"
            android:src="@drawable/bf_friends_icon"
            android:layout_gravity="center"/>
        <View
            android:background="#66ffffff"
            android:layout_height="1.0dip"
            android:layout_width="fill_parent"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip" />

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:text="@string/abp_party"
            android:id="@+id/ib_party"
            android:background="@drawable/tab_button"
            android:src="@drawable/bf_bondfire_icon"
            android:layout_gravity="center"/>

  <!--  </LinearLayout>-->


</merge>

