<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="48dip"
    android:paddingLeft="48dip"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="48dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#00000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:clickable="true">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/tab_button"
                android:layout_gravity="center"
                android:id="@+id/b_switch_add_friend"
                android:text="@string/scan_b_add_friend"
                android:textColor="@drawable/textColorWhite"/>
         </FrameLayout>

        <View
            android:layout_width="5dip"
            android:layout_height="@dimen/box_horizontal_spacing" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:clickable="true">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/tab_button"
                android:layout_gravity="center"
                android:id="@+id/b_scan_invite_to_party"
                android:text="@string/scan_b_invite_party"
                android:textColor="@drawable/textColorWhite"/>

        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dip"
        android:id="@+id/view"
        android:background="#00000000"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/fragment_scan_section_title"
            android:textSize="@dimen/bf_tex_size"
            android:textColor="@drawable/textColorWhite"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/textColorWhite"
           />
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@android:id/list"/>

</LinearLayout>