<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/action_bar_height"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#00000000"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@drawable/textColorWhite"
        android:textSize="@dimen/standard_text_size"
        android:text="@string/dear_text"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"
        android:textSize = "@dimen/standard_text_size"
        android:textColor="@drawable/textColorWhite"
        android:textAlignment="center"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gorillamoa_news"
        android:textSize = "@dimen/standard_text_size"
        android:textColor="@drawable/textColorWhite"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instagram_icon"
            android:layout_weight="1"
            android:id="@+id/iv_instagram_gorillamoa"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter_icon"
            android:layout_weight="1"
            android:id="@+id/iv_twitter_gorillamoa"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tumblr_icon"
            android:layout_weight="1"
            android:id="@+id/iv_tumblr_gorillamoa"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/player_icon"
            android:layout_weight="1"
            android:id="@+id/iv_player_gorillamoa"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus_icon"
            android:layout_weight="1"
            android:id="@+id/iv_plus_gorillamoa"
            />
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="50dip"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/tab_button"
            android:id="@+id/store_enter_icon">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/bf_store_icon"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_store"
                android:textSize = "@dimen/standard_text_size"
                android:textColor="@drawable/textColorWhite"
                android:layout_gravity="center"
                />
        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="20dip"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>