<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/background"
     >

    <com.bondfire.app.android.background.BackgroundGradientView
        android:layout_width="fill_parent"
        android:layout_height="200dp" />

    <FrameLayout
        android:id="@+id/fl_game_title"
        android:layout_width="@dimen/dialog_title_view_width"
        android:layout_height="@dimen/dialog_title_view_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Game Title"
            android:textColor="@drawable/textColorWhite"
            android:layout_gravity="center"
            android:textSize="@dimen/dialog_title_size"
            android:singleLine="true"
            android:id="@+id/tv_game_title"/>
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@drawable/textColorWhite"
        android:layout_below="@+id/fl_game_title"
        android:id="@+id/space_1"
        />

    <LinearLayout
        android:id="@+id/ll_requirements"
        android:layout_below="@+id/space_1"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        >

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/bf_bird_icon"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/dialog_player_count"
            android:textColor="@drawable/textColorWhite"
            android:layout_gravity="center"
            android:textSize="@dimen/dialog_standard_size"
            android:layout_weight="1"
            android:id="@+id/player_count"/>

    </LinearLayout>

    <View
        android:id="@+id/space_2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@drawable/textColorWhite"
        android:layout_below="@+id/ll_requirements"
        />

    <FrameLayout
        android:layout_below="@+id/space_2"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/tab_button"
        android:clickable="true"
        android:id="@+id/leader_board">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_leader"
            android:textColor="@drawable/textColorWhite"
            android:layout_gravity="center"
            android:textSize="@dimen/dialog_standard_size"
         />
    </FrameLayout>

    <View
        android:layout_below="@+id/leader_board"
        android:id="@+id/space_3"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@drawable/textColorWhite"
        />

    <LinearLayout
        android:layout_below="@+id/space_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0.0dip"
            android:layout_height="@dimen/action_bar_height"
            android:background="@drawable/tab_button"
            android:clickable="true"
            android:layout_weight="1"
            android:id="@+id/b_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_cancel"
            android:textColor="@drawable/textColorWhite"
            android:layout_gravity="center"
            android:textSize="@dimen/dialog_standard_size"
            />

         </FrameLayout>


        <View
            android:background="#33ffffff"
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip" />

        <FrameLayout
            android:layout_width="0.0dp"
            android:layout_height="@dimen/action_bar_height"
            android:background="@drawable/tab_button"
            android:clickable="true"
            android:layout_weight="1"
            android:id="@+id/b_play">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_play"
                android:textColor="@drawable/textColorWhite"
                android:layout_gravity="center"
                android:textSize="@dimen/dialog_standard_size"

                />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>